# xplatform

./: CMakeLists.txt  CMakePresets.json
BlockOutlining/: CMakeLists.txt
BlockOutlining/assets/shaders/: unlitShader.vert
BlockOutlining/include/: main.hpp
BlockOutlining/resources/shaders/: SColortShader.frag  SColortShader.vert  unlitShader.frag
BlockOutlining/src/: main.cpp
BlockOutlining/toolkit/: Shader.cpp  Texture2D.cpp  Texture2D.hpp
CMakeProjectTempalate/: CMakeLists.txt
FUTHER WORK/MirrorTest/: CMakeLists.txt
FUTHER WORK/MirrorTest/src/: main.cpp
FUTHER WORK/Snake/: CMakeLists.txt
FUTHER WORK/Snake/include/: Game.hpp  main.hpp
FUTHER WORK/Snake/src/: main.cpp
FUTHER WORK/TestEventSystem/src/: main.c
FUTHER WORK/WINAPI/: CMakeLists.txt
FUTHER WORK/WINAPI/demo1/: CMakeLists.txt
FUTHER WORK/WINAPI/demo1/include/: Time.hpp  Window.hpp
FUTHER WORK/WINAPI/demo1/resources/shaders/: 1.frag
FUTHER WORK/WINAPI/demo1/src/: App.cpp  Window.cpp
FUTHER WORK/WINAPI/demo2/include/: input.h
FUTHER WORK/demo1/: CMakeLists.txt
FUTHER WORK/demo1/assets/shaders/: unlitShader.vert
FUTHER WORK/demo1/include/: Camera.hpp  Chunk.hpp  World.hpp
FUTHER WORK/demo1/src/: Block.cpp  BlockManager.cpp  Chunk.cpp
FUTHER WORK/native_grap/include/: main.hpp
FUTHER WORK/native_grap/src/: main.cpp
MirrorTest/assets/shaders/: unlitShader.frag
MirrorTest/src/: CMakeLists.txt  main.h
Snake/: CMakeLists.txt
Snake/include/: Renderer.hpp  game.h  input.h  renderer.h  typedef.h
Snake/src/: Game.cpp  Renderer.cpp  game.cpp  input.cpp  main.cpp  renderer.cpp
TestEventSystem/: CMakeLists.txt
TestEventSystem/src/: CMakeLists.txt  main.h
WINAPI/: CMakeLists.txt
WINAPI/demo1/: CMakeLists.txt  Structure.txt
WINAPI/demo1/include/: App.hpp  main.hpp
WINAPI/demo1/resources/shaders/: 1.frag  1.vert
WINAPI/demo1/src/: Time.cpp  main.cpp
WINAPI/demo1/toolkit/: Behavior.cpp  Behavior.hpp  Camera.hpp  Shader.cpp  Shader.hpp  Transform.cpp  Transform.hpp
WINAPI/demo2/: CMakeLists.txt
WINAPI/demo2/include/: game.h  renderer.h
WINAPI/demo2/src/: game.cpp  input.cpp  main.cpp  renderer.cpp
demo1/: CMakeLists.txt
demo1/assets/shaders/: unlitShader.frag
demo1/include/: Block.hpp  BlockManager.hpp  main.hpp
demo1/include/Engine/: Block.hpp  Camera.hpp  Chunk.hpp  Engine.hpp  World.hpp
demo1/src/: Camera.cpp  World.cpp  main.cpp
demo1/src/Engine/: Block.cpp  Camera.cpp  Chunk.cpp  Engine.cpp  World.cpp
glh/: CMakeLists.txt
glh/src/: Shader.cpp
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glm/: CMakeLists.txt
libs/glm/include/glm/: CMakeLists.txt
libs/stbi/: CMakeLists.txt
native_grap/: CMakeLists.txt
